syntax = "proto3";

package auth;

option go_package = "github.com/gulovv/price-tracker/proto";

service AuthService {
    rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
    rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message AuthRequest {
    string login = 1;
    string password = 2;
}

message AuthResponse {
    bool success = 1;
    string token = 2;
    string message = 3;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    int64 user_id = 2;
    string message = 3;
}